cfu: Add an initial outline CFU plugin
There's no actual hardware to test this against yet, but this is how I
would lay out a plugin if there was.

We still need to work out a generic encapsulation for the offer and
payload (for each component and bank) so this can work with LVFS and
fwupd.

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -8,6 +8,7 @@ subdir('ata')
 subdir('bcm57xx')
 subdir('bios')
 subdir('ccgx')
+subdir('cfu')
 subdir('colorhug')
 subdir('cpu')
 subdir('cros-ec')
