--- a/data/daemon.conf
+++ b/data/daemon.conf
@@ -42,3 +42,7 @@ BlockedFirmware=
 #
 # If unset or no schemes are listed, the default will be: file,https,http,ipfs
 UriSchemes=
+
+# Ignore power levels of devices when running updates
+IgnorePower=false
+
