trivial: Do not install the device tests when using -Dtests=false

--- a/data/meson.build
+++ b/data/meson.build
@@ -3,7 +3,10 @@ subdir('pki')
 subdir('remotes.d')
 subdir('bash-completion')
 subdir('fish-completion')
+
+if get_option('tests')
 subdir('device-tests')
+endif
 
 if build_daemon
 subdir('motd')
