Allow installing the LVFS remote, but disabled
This is a patch that I have to regenerate almost every rebase. Just
move it upstream as it's probably not RHEL specific.

--- a/data/remotes.d/lvfs.conf
+++ b/data/remotes.d/lvfs.conf
@@ -1,7 +1,7 @@
 [fwupd Remote]
 
 # this remote provides metadata and firmware marked as 'stable' from the LVFS
-Enabled=true
+Enabled=@enabled@
 Title=Linux Vendor Firmware Service
 MetadataURI=https://cdn.fwupd.org/downloads/firmware.xml.gz
 ReportURI=https://fwupd.org/lvfs/firmware/report
