--- a/meson_options.txt
+++ b/meson_options.txt
@@ -3,7 +3,7 @@ option('consolekit', type : 'boolean', value : true, description : 'enable Conso
 option('firmware-packager', type : 'boolean', value : true, description : 'enable firmware-packager installation')
 option('docs', type : 'combo', choices : ['none', 'gtkdoc', 'docgen'], value : 'docgen', description : 'developer documentation type')
 option('introspection', type : 'boolean', value : true, description : 'generate GObject Introspection data')
-option('lvfs', type : 'boolean', value : true, description : 'enable LVFS remotes')
+option('lvfs', type : 'combo', choices : ['true', 'false', 'disabled'], value : 'true', description : 'install LVFS remotes')
 option('man', type : 'boolean', value : true, description : 'enable man pages')
 option('libarchive', type : 'boolean', value : true, description : 'enable libarchive support')
 option('gudev', type : 'boolean', value : true, description : 'enable GUdev support')
