trivial: Do not fail to run tests when compiling gcab as a subproject
Perhaps using the same name for a local variable and a subproject
probably wasn't the brightest of ideas.

--- a/data/installed-tests/meson.build
+++ b/data/installed-tests/meson.build
@@ -40,7 +40,7 @@ custom_target('installed-cab123',
   ],
   output : 'fakedevice123.cab',
   command : [
-    gcab, '--create', '--nopath', '@OUTPUT@', '@INPUT@',
+    gcabcmd, '--create', '--nopath', '@OUTPUT@', '@INPUT@',
   ],
   install: true,
   install_dir: installed_test_datadir,
@@ -53,7 +53,7 @@ custom_target('installed-cab124',
   ],
   output : 'fakedevice124.cab',
   command : [
-    gcab, '--create', '--nopath', '@OUTPUT@', '@INPUT@',
+    gcabcmd, '--create', '--nopath', '@OUTPUT@', '@INPUT@',
   ],
   install: true,
   install_dir: installed_test_datadir,
