Rename the development branch from master to main
Fixes https://github.com/fwupd/fwupd/issues/3799

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,7 +158,7 @@ workflows:
             - build-snap
           filters:
             branches:
-              only: master
+              only: main
   deploy:
     jobs:
       - build-ubuntu-x86_64:
