--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     rev: v4.0.1
     hooks:
     -   id: no-commit-to-branch
-        args: [--branch, master, --pattern, 1_.*_X]
+        args: [--branch, main, --pattern, 1_.*_X]
     -   id: check-added-large-files
     -   id: check-byte-order-marker
     -   id: check-executables-have-shebangs
