usi-dock: Add support for various TBT4 docks for Lenovo and HP
With much help from Victor Cheng <victor_cheng@usiglobal.com>

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -70,6 +70,7 @@ subdir('uefi-dbx')
 subdir('uefi-pk')
 subdir('uefi-recovery')
 subdir('upower')
+subdir('usi-dock')
 subdir('vli')
 subdir('wacom-raw')
 subdir('wacom-usb')
