--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -71,6 +71,7 @@ subdir('uefi-dbx')
 subdir('uefi-pk')
 subdir('uefi-recovery')
 subdir('upower')
+subdir('usi-dock')
 subdir('vli')
 subdir('wacom-raw')
 subdir('wacom-usb')
