trivial: Add missing Fedora BuildRequires

--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -59,6 +59,7 @@ BuildRequires: libgusb-devel >= %{libgusb_version}
 BuildRequires: libcurl-devel >= %{libcurl_version}
 BuildRequires: libjcat-devel >= %{libjcat_version}
 BuildRequires: polkit-devel >= 0.103
+BuildRequires: protobuf-c-devel
 BuildRequires: sqlite-devel
 BuildRequires: systemd >= %{systemd_version}
 BuildRequires: systemd-devel
