Fix build error when sys/io.h is not available

--- a/meson.build
+++ b/meson.build
@@ -314,6 +314,9 @@ endif
 if cc.has_header('sys/socket.h')
   conf.set('HAVE_SOCKET_H', '1')
 endif
+if cc.has_header('sys/io.h')
+  conf.set('HAVE_IO_H', '1')
+endif
 if cc.has_header('linux/ethtool.h')
   conf.set('HAVE_ETHTOOL_H', '1')
 endif
