--- a/data/fwupd.service.in
+++ b/data/fwupd.service.in
@@ -6,6 +6,7 @@ Before=display-manager.service
 
 [Service]
 Type=dbus
+TimeoutSec=180
 RuntimeDirectory=@motd_dir@
 RuntimeDirectoryPreserve=yes
 BusName=org.freedesktop.fwupd
