Share the Common Flash Memory Interface quirks between plugins
Now two plugins are using hardcoded SPI constants for various CFI chips,
and it makes sense to have some common quirk data that can be used by
both.

Add a FuSpiChip helper object that can be used by FuDevice subclasses
to get the specific SPI commands to use for each flash ID.

--- a/data/meson.build
+++ b/data/meson.build
@@ -23,7 +23,7 @@ if build_standalone
   install_data(['daemon.conf'],
     install_dir : join_paths(sysconfdir, 'fwupd')
   )
-  install_data(['power.quirk'],
+  install_data(['power.quirk', 'cfi.quirk'],
     install_dir: join_paths(datadir, 'fwupd', 'quirks.d'))
 endif
 
