--- a/policy/org.freedesktop.fwupd.policy.in
+++ b/policy/org.freedesktop.fwupd.policy.in
@@ -29,9 +29,9 @@
     <!-- TRANSLATORS: this is the PolicyKit modal dialog -->
     <message>Authentication is required to update the firmware on this machine</message>
     <defaults>
-      <allow_any>auth_admin</allow_any>
+      <allow_any>no</allow_any>
       <allow_inactive>no</allow_inactive>
-      <allow_active>auth_admin_keep</allow_active>
+      <allow_active>no</allow_active>
     </defaults>
     <annotate key="org.freedesktop.policykit.imply">org.freedesktop.fwupd.update-internal-trusted</annotate>
   </action>
@@ -64,9 +64,9 @@
     <!-- TRANSLATORS: this is the PolicyKit modal dialog -->
     <message>Authentication is required to update the firmware on a removable device</message>
     <defaults>
-      <allow_any>auth_admin</allow_any>
+      <allow_any>no</allow_any>
       <allow_inactive>no</allow_inactive>
-      <allow_active>auth_admin_keep</allow_active>
+      <allow_active>no</allow_active>
     </defaults>
     <annotate key="org.freedesktop.policykit.imply">org.freedesktop.fwupd.update-hotplug-trusted</annotate>
   </action>
