--- a/policy/org.freedesktop.fwupd.policy.in
+++ b/policy/org.freedesktop.fwupd.policy.in
@@ -36,8 +36,8 @@
     <annotate key="org.freedesktop.policykit.imply">org.freedesktop.fwupd.update-internal-trusted</annotate>
   </action>
 
-  <action id="org.freedesktop.fwupd.downgrade-internal">
-    <description>Install old version of system firmware</description>
+  <action id="org.freedesktop.fwupd.downgrade-internal-trusted">
+    <description>Install old version of signed system firmware</description>
     <!-- TRANSLATORS: this is the PolicyKit modal dialog -->
     <message>Authentication is required to downgrade the firmware on this machine</message>
     <defaults>
@@ -46,6 +46,18 @@
       <allow_active>auth_admin_keep</allow_active>
     </defaults>
     <annotate key="org.freedesktop.policykit.imply">org.freedesktop.fwupd.update-internal</annotate>
+  </action>
+
+  <action id="org.freedesktop.fwupd.downgrade-internal">
+    <description>Install old version of unsigned system firmware</description>
+    <!-- TRANSLATORS: this is the PolicyKit modal dialog -->
+    <message>Authentication is required to downgrade the firmware on this machine</message>
+    <defaults>
+      <allow_any>auth_admin</allow_any>
+      <allow_inactive>no</allow_inactive>
+      <allow_active>auth_admin_keep</allow_active>
+    </defaults>
+    <annotate key="org.freedesktop.policykit.imply">org.freedesktop.fwupd.downgrade-internal-trusted</annotate>
   </action>
 
   <action id="org.freedesktop.fwupd.update-hotplug-trusted">
@@ -71,6 +83,17 @@
     <annotate key="org.freedesktop.policykit.imply">org.freedesktop.fwupd.update-hotplug-trusted</annotate>
   </action>
 
+  <action id="org.freedesktop.fwupd.downgrade-hotplug-trusted">
+    <description>Install signed device firmware</description>
+    <!-- TRANSLATORS: this is the PolicyKit modal dialog -->
+    <message>Authentication is required to downgrade the firmware on a removable device</message>
+    <defaults>
+      <allow_any>auth_admin</allow_any>
+      <allow_inactive>no</allow_inactive>
+      <allow_active>auth_admin_keep</allow_active>
+    </defaults>
+  </action>
+
   <action id="org.freedesktop.fwupd.downgrade-hotplug">
     <description>Install unsigned device firmware</description>
     <!-- TRANSLATORS: this is the PolicyKit modal dialog -->
@@ -80,7 +103,7 @@
       <allow_inactive>no</allow_inactive>
       <allow_active>auth_admin_keep</allow_active>
     </defaults>
-    <annotate key="org.freedesktop.policykit.imply">org.freedesktop.fwupd.update-hotplug</annotate>
+    <annotate key="org.freedesktop.policykit.imply">org.freedesktop.fwupd.downgrade-hotplug-trusted</annotate>
   </action>
 
   <action id="org.freedesktop.fwupd.device-unlock">
