Only installing firmwares with signatures by default
99.9999% of users are consuming firmware updates from the LVFS or
another trusted remote. It's far too easy to get a user to enter the
password to install an untrusted firmware, where the security
consequences are pretty dire.

Provide an escape-hatch for firmware engineers, but it does mean
editing a file in /etc as root. This seems like an acceptable level of
inconvenience.

--- a/data/daemon.conf
+++ b/data/daemon.conf
@@ -46,3 +46,6 @@ UriSchemes=
 # Ignore power levels of devices when running updates
 IgnorePower=false
 
+# For systems using polkit for authorization, only support installing firmware
+# signed with a trusted key
+OnlyTrusted=true
