--- a/data/daemon.conf
+++ b/data/daemon.conf
@@ -46,6 +46,5 @@ UriSchemes=
 # Ignore power levels of devices when running updates
 IgnorePower=false
 
-# For systems using polkit for authorization, only support installing firmware
-# signed with a trusted key
+# Only support installing firmware signed with a trusted key
 OnlyTrusted=true
