Move the fuzzing files into the plugin directories
We only had to pile everything into the src/fuzzing/firmware directory
because honggfuzz could not cope with more than one input path.

This way each plugin is self contained and easy to copy.
Also, install the fuzzing builder objects as this fixes the installed
tests when srcdir does not exist.

Based on a patch by Jan Tojnar <jtojnar@gmail.com>, many thanks.

--- a/plugins/elantp/meson.build
+++ b/plugins/elantp/meson.build
@@ -38,6 +38,11 @@ shared_module('fu_plugin_elantp',
 endif
 
 if get_option('tests')
+  install_data(['tests/elantp.builder.xml'],
+    install_dir: join_paths(installed_test_datadir, 'tests'))
+  env = environment()
+  env.set('G_TEST_SRCDIR', meson.current_source_dir())
+  env.set('G_TEST_BUILDDIR', meson.current_build_dir())
   e = executable(
     'elantp-self-test',
     fu_hash,
@@ -60,5 +65,5 @@ if get_option('tests')
     install : true,
     install_dir : installed_test_bindir,
   )
-  test('elantp-self-test', e)
+  test('elantp-self-test', e, env : env)
 endif
