--- a/plugins/synaptics-prometheus/meson.build
+++ b/plugins/synaptics-prometheus/meson.build
@@ -32,6 +32,8 @@ shared_module('fu_plugin_synaptics_prometheus',
 )
 
 if get_option('tests')
+  install_data(['tests/synaptics-prometheus.builder.xml'],
+    install_dir: join_paths(installed_test_datadir, 'tests'))
   env = environment()
   env.set('G_TEST_SRCDIR', meson.current_source_dir())
   env.set('G_TEST_BUILDDIR', meson.current_build_dir())
