--- a/plugins/bcm57xx/meson.build
+++ b/plugins/bcm57xx/meson.build
@@ -34,6 +34,11 @@ shared_module('fu_plugin_bcm57xx',
 )
 
 if get_option('tests')
+  install_data(['tests/bcm57xx.builder.xml'],
+    install_dir: join_paths(installed_test_datadir, 'tests'))
+  env = environment()
+  env.set('G_TEST_SRCDIR', meson.current_source_dir())
+  env.set('G_TEST_BUILDDIR', meson.current_build_dir())
   e = executable(
     'bcm57xx-self-test',
     fu_hash,
@@ -60,5 +65,5 @@ if get_option('tests')
     install : true,
     install_dir : installed_test_bindir,
   )
-  test('bcm57xx-self-test', e)
+  test('bcm57xx-self-test', e, env : env)
 endif
