--- a/plugins/synaptics-mst/meson.build
+++ b/plugins/synaptics-mst/meson.build
@@ -37,6 +37,8 @@ shared_module('fu_plugin_synaptics_mst',
 )
 
 if get_option('tests')
+  install_data(['tests/synaptics-mst.builder.xml'],
+    install_dir: join_paths(installed_test_datadir, 'tests'))
   env = environment()
   env.set('G_TEST_SRCDIR', meson.current_source_dir())
   env.set('G_TEST_BUILDDIR', meson.current_build_dir())
