--- a/plugins/synaptics-rmi/meson.build
+++ b/plugins/synaptics-rmi/meson.build
@@ -38,9 +38,15 @@ shared_module('fu_plugin_synaptics_rmi',
     fwupdplugin,
   ],
 )
+
 endif
 
 if get_option('tests')
+  install_data(['tests/synaptics-rmi-0x.builder.xml','tests/synaptics-rmi-10.builder.xml'],
+    install_dir: join_paths(installed_test_datadir, 'tests'))
+  env = environment()
+  env.set('G_TEST_SRCDIR', meson.current_source_dir())
+  env.set('G_TEST_BUILDDIR', meson.current_build_dir())
   e = executable(
     'synaptics-rmi-self-test',
     fu_hash,
@@ -65,5 +71,5 @@ if get_option('tests')
     install : true,
     install_dir : installed_test_bindir,
   )
-  test('synaptics-rmi-self-test', e)
+  test('synaptics-rmi-self-test', e, env : env)
 endif
