Add a configure option for fastboot support
Fixes https://github.com/fwupd/fwupd/issues/3920

--- a/plugins/fastboot/meson.build
+++ b/plugins/fastboot/meson.build
@@ -1,4 +1,9 @@
-if get_option('gusb')
+if get_option('plugin_fastboot')
+
+if not get_option('gusb')
+  error('gusb is required for plugin_fastboot')
+endif
+
 cargs = ['-DG_LOG_DOMAIN="FuPluginFastboot"']
 
 install_data(['fastboot.quirk'],
