Move the TPM handling into the TPM place
The fact that it currently lives in uefi-capsule is a historical
accident, and it doesn't really belong to tpm-eventlog either.

Fixes some of https://github.com/fwupd/fwupd/issues/3901

--- a/plugins/tpm/meson.build
+++ b/plugins/tpm/meson.build
@@ -15,6 +15,8 @@ shared_module('fu_plugin_tpm',
   sources : [
     'fu-plugin-tpm.c',
     'fu-tpm-device.c',
+    'fu-tpm-v1-device.c',
+    'fu-tpm-v2-device.c',
   ],
   include_directories : [
     root_incdir,
@@ -33,4 +35,36 @@ shared_module('fu_plugin_tpm',
     tpm2tss,
   ],
 )
+
+if get_option('tests')
+  env = environment()
+  env.set('G_TEST_SRCDIR', meson.current_source_dir())
+  env.set('G_TEST_BUILDDIR', meson.current_build_dir())
+  env.set('FWUPD_LOCALSTATEDIR', '/tmp/fwupd-self-test/var')
+  e = executable(
+    'tpm-self-test',
+    fu_hash,
+    sources : [
+      'fu-self-test.c',
+      'fu-tpm-device.c',
+      'fu-tpm-v1-device.c',
+      'fu-tpm-v2-device.c',
+    ],
+    include_directories : [
+      root_incdir,
+      fwupd_incdir,
+      fwupdplugin_incdir,
+    ],
+    dependencies : [
+      plugin_deps,
+      tpm2tss,
+    ],
+    link_with : [
+      fwupd,
+      fwupdplugin,
+    ],
+    c_args : cargs
+  )
+  test('tpm-self-test', e, env: env)
+endif
 endif
