trivial: enable Github actions for 1.6.x CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Continuous Integration
 on:
   push:
-    branches: [ master ]
+    branches: [ 1_6_X ]
   pull_request:
-    branches: [ master ]
+    branches: [ 1_6_X ]
 
 jobs:
   pre-commit:
