Build logind plugin for elogind-enabled systems

--- a/plugins/logind/meson.build
+++ b/plugins/logind/meson.build
@@ -1,4 +1,4 @@
-if get_option('systemd')
+if get_option('systemd') or get_option('elogind')
 if host_machine.system() != 'linux'
   error('linux is required for systemd')
 endif
