--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -40,6 +40,7 @@ subdir('logitech-hidpp')
 subdir('logitech-bulkcontroller')
 subdir('modem-manager')
 subdir('msr')
+subdir('mtd')
 subdir('nitrokey')
 subdir('nvme')
 subdir('optionrom')
