Include fwupd-unsigned-dev in build-depends
This will require some work upstream for generate_debian.py for the
next release, but chicken and egg with it being in the debian archive

--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Uploaders: Steve McIntyre <93sam@debian.org>,
            Matthias Klumpp <mak@debian.org>,
            Mario Limonciello <mario.limonciello@dell.com>
 Build-Depends:
+	fwupd-unsigned-dev,
 	bash-completion,
 	bubblewrap,
 	debhelper (>= 12),
