--- a/debian/control.in
+++ b/debian/control.in
@@ -4,7 +4,9 @@ Maintainer: Debian EFI <debian-efi@lists.debian.org>
 Uploaders: Steve McIntyre <93sam@debian.org>,
            Matthias Klumpp <mak@debian.org>,
            Mario Limonciello <mario.limonciello@dell.com>
-Build-Depends: %%%DYNAMIC%%%
+Build-Depends:
+	fwupd-unsigned-dev,
+        %%%DYNAMIC%%%
 Build-Depends-Indep: libglib2.0-doc <!nodoc>
 Standards-Version: 4.5.0
 Section: admin
