Speed up the daemon startup by ~2% by doing dlsym much less
We were calling g_module_symbol() 2703 times, which is actually more
expensive than you'd think.

It also means the plugins are actually what we tell people they are:
A set of vfuncs that get run. The reality before that they were dlsym'd
functions that get called at pretty random times.

--- a/contrib/setup-win32.nsi.in
+++ b/contrib/setup-win32.nsi.in
@@ -64,7 +64,7 @@ Section "fwupd"
   File "jcat-tool.exe"
   File "fwupdtool.exe"
   File "libfwupd-2.dll"
-  File "libfwupdplugin-4.dll"
+  File "libfwupdplugin-@FWUPD_PLUGINVER@.dll"
   File "libgcab-1.0-0.dll"
   File "libxmlb-2.dll"
   File "libjcat-1.dll"
