Allow overriding HwId data from the config file
To use this on a immutable system like ChromeOS you can create a file
in /var/lib/fwupd/daemon.conf which is used as an override.

--- a/data/daemon.conf
+++ b/data/daemon.conf
@@ -48,3 +48,12 @@ IgnorePower=false
 
 # Only support installing firmware signed with a trusted key
 OnlyTrusted=true
+
+# these are only required when the SMBIOS or Device Tree data is invalid or missing
+#Manufacturer=
+#ProductName=
+#ProductSku=
+#Family=
+#EnclosureKind=
+#BaseboardProduct=
+#BaseboardManufacturer=
