--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -41,6 +41,7 @@ subdir('modem-manager')
 subdir('msr')
 subdir('mtd')
 subdir('nitrokey')
+subdir('nordic-hid')
 subdir('nvme')
 subdir('optionrom')
 subdir('parade-lspcon')
