--- a/meson_options.txt
+++ b/meson_options.txt
@@ -50,3 +50,4 @@ option('efi_binary', type: 'boolean', value : true, description : 'generate uefi
 option('metainfo', type: 'boolean', value : true, description : 'install the project metainfo.xml information')
 option('bash_completion', type: 'boolean', value : true, description : 'enable bash completion')
 option('fish_completion', type: 'boolean', value : true, description : 'enable fish completion')
+option('offline', type: 'boolean', value : true, description : 'enable installing firmware using a pre-boot systemd target')
