--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           ./contrib/setup
           source venv/bin/activate
           sed -i "/no-commit-to-branch/,+1d" .pre-commit-config.yaml
-          pre-commit run --all-files
+          pre-commit run --hook-stage commit --all-files
   abi:
     runs-on: ubuntu-20.04
     steps:
