--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,4 @@
+default_stages: [commit]
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
@@ -53,6 +54,11 @@ repos:
       language: system
       entry: shellcheck --severity=warning -e SC2068
       types: [shell]
+    - id: run-tests
+      name: run tests before pushing
+      language: script
+      entry: ./contrib/run-tests.sh
+      stages: [push]
     - id: clang-format
       name: clang-format
       language: script
