trivial: Fix the example spec file to work on s390x

--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -525,7 +525,9 @@ done
 %{_datadir}/installed-tests/fwupd/*.test
 %{_datadir}/installed-tests/fwupd/*.cab
 %{_datadir}/installed-tests/fwupd/*.sh
+%if 0%{?have_uefi}
 %{_datadir}/installed-tests/fwupd/efi
+%endif
 %{_datadir}/fwupd/device-tests/*.json
 %{_libexecdir}/installed-tests/fwupd/*
 %dir %{_sysconfdir}/fwupd/remotes.d
