usi-dock: Re-named plugin name to usi-dock

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -29,7 +29,6 @@ subdir('hailuck')
 subdir('intel-spi')
 subdir('iommu')
 subdir('jabra')
-subdir('lenovo-dock')
 subdir('lenovo-thinklmi')
 subdir('linux-lockdown')
 subdir('linux-sleep')
@@ -72,6 +71,7 @@ subdir('uefi-dbx')
 subdir('uefi-pk')
 subdir('uefi-recovery')
 subdir('upower')
+subdir('usi-dock')
 subdir('vli')
 subdir('wacom-raw')
 subdir('wacom-usb')
