--- a/data/bash-completion/fwupdmgr.in
+++ b/data/bash-completion/fwupdmgr.in
@@ -30,6 +30,7 @@ _fwupdmgr_cmd_list=(
 	'security'
 	'set-approved-firmware'
 	'switch-branch'
+	'sync-bkc'
 	'unlock'
 	'unblock-firmware'
 	'update'
