--- a/data/daemon.conf
+++ b/data/daemon.conf
@@ -49,6 +49,11 @@ IgnorePower=false
 # Only support installing firmware signed with a trusted key
 OnlyTrusted=true
 
+# A host best known configuration is used when using `fwupdmgr sync` which can
+# downgrade firmware to factory versions or upgrade firmware to a supported
+# config level. e.g. `vendor-factory-2021q1`
+HostBkc=
+
 # these are only required when the SMBIOS or Device Tree data is invalid or missing
 #Manufacturer=
 #ProductName=
