--- a/libfwupdplugin/fu-fuzzer-firmware.c.in
+++ b/libfwupdplugin/fu-fuzzer-firmware.c.in
@@ -18,6 +18,8 @@ LLVMFuzzerTestOneInput(const guint8 *data, gsize size)
 	g_setenv("G_DEBUG", "fatal-criticals", FALSE);
 	ret = fu_firmware_parse(firmware, fw, FWUPD_INSTALL_FLAG_NONE, NULL);
 	if (!ret && fu_firmware_has_flag(firmware, FU_FIRMWARE_FLAG_HAS_CHECKSUM)) {
+		g_clear_object(&firmware);
+		firmware = FU_FIRMWARE(@FIRMWARENEW@());
 		ret = fu_firmware_parse(firmware,
 					fw,
 					FWUPD_INSTALL_FLAG_NO_SEARCH |
