Make Upower and powerd support optional
In some cases you really know that the daemon is never going to exist.

--- a/plugins/powerd/meson.build
+++ b/plugins/powerd/meson.build
@@ -1,4 +1,4 @@
-if host_machine.system() == 'linux' and gio.version().version_compare('>=2.58')
+if get_option('plugin_powerd') and host_machine.system() == 'linux' and gio.version().version_compare('>=2.58')
   cargs = ['-DG_LOG_DOMAIN="FuPluginPowerd"']
 
 shared_module('fu_plugin_powerd',
