--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -175,6 +175,7 @@ parts:
                        -Dintrospection=false,
                        -Dman=false,
                        -Dplugin_modem_manager=true,
+                       -Dplugin_powerd=false,
                        -Dudevdir=$SNAPCRAFT_STAGE/lib/udev,
                        "-Dgusb:tests=false",
                        "-Dgusb:docs=false",
