--- a/contrib/PKGBUILD
+++ b/contrib/PKGBUILD
@@ -29,6 +29,7 @@ build() {
     fi
     arch-meson -D b_lto=false $CI ../build \
         -Dplugin_intel_spi=true \
+        -Dplugin_powerd=false \
         -Dlzma=true \
         -Ddocs=gtkdoc \
         -Defi_binary=false \
