--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -278,6 +278,7 @@ fwupd wrapper for Qubes OS
 %endif
     -Dman=true \
     -Dbluez=true \
+    -Dplugin_powerd=false \
     -Dsupported_build=true
 
 %meson_build
@@ -454,7 +455,6 @@ done
 %{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_pci_bcr.so
 %{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_pci_mei.so
 %{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_pixart_rf.so
-%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_powerd.so
 %{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_realtek_mst.so
 %{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_redfish.so
 %{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_rts54hid.so
