--- a/meson_options.txt
+++ b/meson_options.txt
@@ -36,6 +36,8 @@ option('plugin_mtd', type : 'boolean', value : true, description : 'enable MTD s
 option('plugin_flashrom', type : 'boolean', value : false, description : 'enable libflashrom support')
 option('plugin_platform_integrity', type : 'boolean', value : false, description : 'enable platform integrity support')
 option('plugin_intel_spi', type : 'boolean', value : false, description : 'enable Intel SPI support')
+option('plugin_upower', type : 'boolean', value : true, description : 'enable support for UPower')
+option('plugin_powerd', type : 'boolean', value : true, description : 'enable support for powerd')
 option('qubes', type : 'boolean', value : false, description : 'build packages for Qubes OS')
 option('supported_build', type : 'boolean', value : false, description: 'distribution package with upstream support')
 option('systemd', type : 'boolean', value : true, description : 'enable systemd support')
