Make the HSI tests optional for embedded targets
70% of the plugins installed on OpenBMC are not being used...

--- a/meson.build
+++ b/meson.build
@@ -204,6 +204,9 @@ endif
 if get_option('bluez')
   conf.set('HAVE_BLUEZ', '1')
 endif
+if get_option('hsi')
+  conf.set('HAVE_HSI', '1')
+endif
 libxmlb = dependency('xmlb', version : '>= 0.1.13', fallback : ['libxmlb', 'libxmlb_dep'])
 if get_option('gusb')
   gusb = dependency('gusb', version : '>= 0.3.0', fallback : ['gusb', 'gusb_dep'])
