--- a/plugins/pci-bcr/meson.build
+++ b/plugins/pci-bcr/meson.build
@@ -1,4 +1,4 @@
-if host_machine.system() == 'linux'
+if get_option('hsi') and host_machine.system() == 'linux'
 cargs = ['-DG_LOG_DOMAIN="FuPluginPciBcr"']
 
 install_data(['pci-bcr.quirk'],
