--- a/meson_options.txt
+++ b/meson_options.txt
@@ -14,12 +14,17 @@ option('gnutls', type: 'boolean', value : true, description : 'enable GnuTLS sup
 option('sqlite', type: 'boolean', value : true, description : 'enable sqlite support')
 option('lzma', type: 'boolean', value : false, description : 'enable LZMA support')
 option('plugin_amt', type : 'boolean', value : true, description : 'enable Intel AMT support')
+option('plugin_acpi_phat', type : 'boolean', value : true, description : 'enable ACPI PHAT support')
+option('plugin_bcm57xx', type : 'boolean', value : true, description : 'enable BCM57xx support')
+option('plugin_cfu', type : 'boolean', value : false, description : 'enable CFU support')
 option('plugin_dell', type : 'boolean', value : true, description : 'enable Dell-specific support')
 option('plugin_dummy', type : 'boolean', value : false, description : 'enable the dummy device')
 option('plugin_emmc', type : 'boolean', value : true, description : 'enable eMMC support')
+option('plugin_ep963x', type : 'boolean', value : true, description : 'enable EP963x support')
 option('plugin_fastboot', type : 'boolean', value : true, description : 'enable Fastboot support')
 option('plugin_logitech_bulkcontroller', type : 'boolean', value : true, description : 'enable Logitech bulk controller support')
 option('plugin_parade_lspcon', type : 'boolean', value : true, description : 'enable Parade LSPCON support')
+option('plugin_pixart_rf', type : 'boolean', value : true, description : 'enable PixartRF support')
 option('plugin_realtek_mst', type : 'boolean', value : true, description : 'enable Realtek MST hub support')
 option('plugin_synaptics_mst', type: 'boolean', value: true, description : 'enable Synaptics MST hub support')
 option('plugin_synaptics_rmi', type: 'boolean', value: true, description : 'enable Synaptics RMI support')
@@ -29,6 +34,7 @@ option('plugin_redfish', type : 'boolean', value : true, description : 'enable R
 option('plugin_uefi_capsule', type : 'boolean', value : true, description : 'enable UEFI capsule support')
 option('plugin_uefi_capsule_splash', type : 'boolean', value : true, description : 'enable UEFI capsule splash support')
 option('plugin_uefi_pk', type : 'boolean', value : true, description : 'enable UEFI PK support')
+option('plugin_nitrokey', type : 'boolean', value : true, description : 'enable Nitrokey support')
 option('plugin_nvme', type : 'boolean', value : true, description : 'enable NVMe support')
 option('plugin_modem_manager', type : 'boolean', value : false, description : 'enable ModemManager support')
 option('plugin_msr', type : 'boolean', value : true, description : 'enable MSR support')
