--- a/plugins/acpi-phat/meson.build
+++ b/plugins/acpi-phat/meson.build
@@ -1,4 +1,4 @@
-if host_machine.system() == 'linux'
+if get_option('plugin_acpi_phat') and host_machine.system() == 'linux'
 cargs = ['-DG_LOG_DOMAIN="FuPluginAcpiPhat"']
 
 shared_module('fu_plugin_acpi_phat',
