chore(ci): Use latest Snapcraft CircleCI image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
 
   build-snap:
     docker:
-      - image: cibuilds/snapcraft:stable
+      - image: cibuilds/snapcraft:core20
     steps:
       - checkout
       - run:
