--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,10 +62,10 @@ jobs:
     steps:
       - run:
           name: "Update apt"
-          command: apt update
+          command: sudo apt update
       - run:
           name: "Install packages"
-          command: apt install ca-certificates -y
+          command: sudo apt install ca-certificates -y
       - checkout
       - run:
           name: "Build Snap"
