--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -436,6 +436,7 @@ done
 %{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_hailuck.so
 %{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_iommu.so
 %{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_jabra.so
+%{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_lenovo_dock.so
 %if 0%{?have_uefi}
 %{_libdir}/fwupd-plugins-%{fwupdplugin_version}/libfu_plugin_lenovo_thinklmi.so
 %endif
