--- a/meson_options.txt
+++ b/meson_options.txt
@@ -17,6 +17,7 @@ option('plugin_amt', type : 'boolean', value : true, description : 'enable Intel
 option('plugin_acpi_phat', type : 'boolean', value : true, description : 'enable ACPI PHAT support')
 option('plugin_bcm57xx', type : 'boolean', value : true, description : 'enable BCM57xx support')
 option('plugin_cfu', type : 'boolean', value : false, description : 'enable CFU support')
+option('plugin_cpu', type : 'boolean', value : true, description : 'enable CPU support')
 option('plugin_dell', type : 'boolean', value : true, description : 'enable Dell-specific support')
 option('plugin_dummy', type : 'boolean', value : false, description : 'enable the dummy device')
 option('plugin_emmc', type : 'boolean', value : true, description : 'enable eMMC support')
